# confyg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
confyg/: __init__.py  confyg.py  utils.py
tests/: test_configurable_model.py  test_model_to_yaml_interface.py  test_utils.py
weldyn/: __init__.py  model_to_yaml_interface.py  weldyn.py
