[project]
name = 'weldyn'
version = '1.0.0'
description = 'Pydantic-based YAML configuration manager'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Pydantic',
]

[project.urls]
Homepage = 'https://github.com/ygatelet/weldyn'

[build-system]
requires = [
    'setuptools',
    'pydantic>=2.0.0,<3.0.0',
    'PyYAML~=6.0'
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
